// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress has a width of 5% if value is equal or less than 5 1`] = `
<Bar__ProgressBar
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={5}
  aria-valuetext="Data Usage"
  progress={5}
  role="progressbar"
  variant="positive"
  zIndex={95}
/>
`;

exports[`Progress has a width that is a percentage proportional to its value 1`] = `
<Bar__ProgressBar
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={50}
  aria-valuetext="Data Usage"
  progress={50}
  role="progressbar"
  variant="positive"
  zIndex={50}
/>
`;

exports[`Progress renders 1`] = `
<Bar__ProgressBar
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={3}
  aria-valuetext="Data Usage"
  progress={5}
  role="progressbar"
  variant="positive"
  zIndex={95}
/>
`;
